<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GMC Dashboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="demo_collection">Demo collection</string>
    <string name="demo_external_activity">Demo external activity</string>
    <string name="dummy_section_text">Dummy section text</string>
    <string name="scan_qrcode">Please target QR code on your monitor to scan it</string>
    <string name="qrcode_button">Scan QR code</string>
    <string name="api_url_text">API URL</string>
    <string name="preference_file_key">give_me_coins.com-api</string>
    <string name="saved_api_key">saved_api_key</string>
    <string name="add_api_key_text">Please enter your API key or scan QR code which contains it</string>
    <string name="save_settings">Save settings</string>
    <string name="delete_settings">Delete settings</string>
    <string name="username_text">Username:</string>
    <string name="totalhash_text">Your hashrate:</string>
    <string name="roundestimate_text">Round estimate:</string>
    <string name="usdroundestimate_text"></string>
	<string name="roundshares_text">Round shares:</string>
	<string name="confirmedrewards_text">Confirmed rewards:</string>
	<string name="usdconfirmedrewards_text"></string>
	<string name="ltc_text">LTC</string>
	<string name="btc_text">BTC</string>
	<string name="ftc_text">FTC</string>
	<string name="vtc_text">VTC</string>
	<string name="missing_username">Getting Data ...</string>
	<string name="saved_coin_select">saved_coin_select</string>
	<string name="pool_name">GMC Pool Status</string>
	<string name="pool_hashrate_text">Pool hashrate:</string>
	<string name="pool_workers_text">Pool active workers:</string>
	<string name="pool_shares_text">Pool shares this round:</string>
	<string name="pool_last_block_text">Pool last block id:</string>
	<string name="pool_last_block_shares_text">Pool last block shares:</string>
	<string name="pool_last_block_finder_text">Pool last block found by:</string>
	<string name="pool_last_block_reward_text">Pool last block reward:</string>
	<string name="pool_difficulty_text">Pool difficulty:</string>
	<string name="api_key_hint">Your API key with /pool/api-ltc...</string>
	<string name="help1_text">Remember that this is Beta version. If you find any bugs please report at: https://github.com/Letme/give-me-coinsMonitoringApp</string>
	<string name="help2_text">Once you enter your API key, please hit save settings. At this moment the data on Summary should start updating (blue,line on top of each tab). In case you do not receive any data in 30 seconds please close app and reopen it. This is known issue and it is being worked on, but it only happens if you do not have saved settings. Pool tab should be OK. In case of any other problems please contact crt on #give-me-coins . I would love to hear any additional feedback and ideas to improve this app before final release.</string>
    <string name="title_activity_widget_main">Widget_main</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="waiting_for_info">Waiting </string>
    <string name="totalhash_widget_text">Total Hashrate</string>
    <string name="workers_online">Workers</string>
    <string name="confirmed_rewards">Confirmed Rewards</string>
    <string name="app_name_ltc">GMC LTC</string>
    <string name="app_name_ftc">GMC FTC</string>
    <string name="app_name_btc">GMC BTC</string>
    <string name="app_name_vtc">GMC VTC</string>
    <string name="notification">GMC</string>
    <string name="refresh_text">Refresh</string>
    <string name="show_btc">Show BTC</string>
    <string name="show_ltc">Show LTC</string>
    <string name="show_ftc">Show FTC</string>
    <string name="show_vtc">Show VTC</string>
    <string name="update_interval_helptext">The information will be updated in the chosen interval.</string>
    <string name="update_interval">Update interval</string>
    <string name="show_helptext">If unchecked this coin is not going to be shown in the app, and doesn\'t get updated. Saves traffic.</string>
   	<string name="sec30">30 seconds</string>
   	<string name="min1">1 minute</string>
   	<string name="min2">2 minutes</string>
   	<string name="min5">5 minutes</string>
   	<string name="min10">10 minutes</string>
   	<string name="min15">15 minutes</string>
   	<string name="min20">20 minutes</string>
   	<string name="min30">30 minutes</string>
   	<string name="h1">1 hour</string>
    <string-array name="update_time_intervals">
        <item >@string/sec30</item>
        <item >@string/min1</item>
        <item >@string/min2</item>
        <item >@string/min5</item>
       	<item >@string/min10</item>
        <item >@string/min15</item>
        <item >@string/min20</item>
        <item >@string/min30</item>
        <item >@string/h1</item>        
    </string-array>
    <string name="show_notification">Show data in top Notification area</string>
    
</resources>
