<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/container_dropshadow_all_sides"
    >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        >
        
       <TextView
            android:id="@+id/hashrate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalhash_widget_text"
            android:gravity="center"
       />
       
        <TextView
            android:id="@+id/total_hash_rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="30sp" 
            android:textStyle="bold"
            android:gravity="center"
        />
        
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="5dp"
        >
        
       <TextView
            android:id="@+id/confirmed_rewards_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed_rewards"
            android:gravity="center"
       />
       
        <TextView
            android:id="@+id/confirmed_rewards"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="20sp" 
            android:textStyle="bold"
            android:gravity="center"
        />
        
	</LinearLayout>
	
	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        >
        
       <TextView
            android:id="@+id/workers_online_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workers_online"
            android:gravity="center"
       />
       
        <TextView
            android:id="@+id/workers_online"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="30sp" 
            android:textStyle="bold"
            android:gravity="center"
        />
        
	</LinearLayout>
        
</LinearLayout>
